# findex

./: .gitignore  CLAUDE.md  README.md  USAGE.md  analyze_growth.py  findex_fullscan.py  findex_patch.py  index.html  main.py  migrate_to_fundamentals.py  pyproject.toml  rules.yaml
.claude/: launch.json
.playwright-mcp/: page-2026-05-31T11-48-57-217Z.yml  page-2026-05-31T11-48-58-151Z.yml  page-2026-05-31T11-49-02-417Z.yml  page-2026-05-31T11-49-03-120Z.yml  page-2026-05-31T11-49-03-947Z.yml  page-2026-05-31T11-49-11-432Z.yml  page-2026-05-31T11-49-17-442Z.yml  page-2026-05-31T11-49-21-395Z.yml  page-2026-05-31T11-49-22-014Z.yml  page-2026-05-31T11-49-22-533Z.yml  page-2026-05-31T11-49-24-853Z.yml  page-2026-05-31T11-49-25-075Z.yml  page-2026-05-31T11-49-30-198Z.yml  page-2026-05-31T11-49-32-949Z.yml  page-2026-05-31T11-49-38-883Z.yml  page-2026-05-31T11-49-45-814Z.yml  page-2026-05-31T11-49-50-910Z.yml
data/: golden_streaks_zai_20260601.csv  verification_cohort.csv
docs/: DESIGN.md  IMPLEMENTATION-PLAN.md  NFR.md  PROGRESS.md  PROJECT-LOG.md  data-architecture.md  data-lifecycle.md  refactoring-data-layer.md  refactoring-tasks.md  requirements.md  ui-issues-2026-06-06.md  yahoo-crosscheck-remediation.md
findex/: __init__.py  backtest.py  backtest_analysis.py  backtest_dividend.py  backtest_momentum.py  cache.py  cli.py  cohort.py  config.py  db.py  migrate.py  momentum.py  poster.py  runner.py  settings.py  verify.py  x_poster.py
findex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: backfill_disclosed_date.py  build_docs_html.py  daily.sh  finish_refresh.sh  publish_hub.sh  refetch_splitless.py  yahoo_highdiv_compare.py  (+2 more)
web/: package.json  (+2 more)
(+163 files in other folders)
