[project]
name = "findex"
version = "0.1.0"
description = "日本株スコアリング・ランキングツール"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "xlrd>=2.0.2",
    "yfinance>=1.4.1",
]

[project.scripts]
findex = "findex.cli:main"
