[project]
name = "findex"
version = "0.2.0"
description = "日本株スコアリング・ランキングツール（v2 再構築）"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.44",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
findex = "findex.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "markdown>=3.6",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["findex*"]
